[package]
name = "theta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
bytes = "1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
lazy_static = "1.4.0"